--- a/package.json
+++ b/package.json
@@ -12,9 +12,19 @@
     "devDependencies": {
         "@popperjs/core": "^2.9.3",
         "axios": "^0.21",
-        "bootstrap": "^5.1.0",
-        "laravel-mix": "^6.0.6",
+        "bootstrap": "^5",
+        "browser-sync": "^2.27.5",
+        "browser-sync-webpack-plugin": "^2.3.0",
+        "jquery": "^3.6",
+        "laravel-mix": "^6.0.27",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "popper.js": "^1.16.1",
+        "postcss": "^8.1.14",
+        "resolve-url-loader": "^4.0.0",
+        "sass": "^1.32.11",
+        "sass-loader": "^11.0.1"
+    },
+    "dependencies": {
+        "@webpixels/css": "^1.0.2"
     }
 }
